fixed layout issues

--- a/src/assets/styles/_common.scss
+++ b/src/assets/styles/_common.scss
@@ -24,6 +24,19 @@ $primary: #4967ff;
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
 }
 
+#root {
+  width: 100dvw;
+  height: 100dvh;
+  margin: 0;
+  overflow: hidden;
+}
+
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+
 
 /* images section ends */
 
